--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -3,7 +3,7 @@ add_newline = false
 format = """$directory$character"""
 palette = "github_dark"
 # move the rest of the prompt to the right
-right_format = """$all"""
+right_format = """$git_branch$git_status$aws$golang$kubernetes$docker_context$cmd_duration"""
 command_timeout = 1000
 
 [character]
